Plot verbage is generalized (hastily), and formatted better. Tooltips have generalized verbage. Bugs squashed in the /algSelect endpoint where endpoint would assign transformer's 'None' value to algorithm.

--- a/static/f4a.css
+++ b/static/f4a.css
@@ -45,3 +45,9 @@ table {
   border-style: solid;
   padding: 4px;
 }
+
+.plot-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 60vw;
+}
